@@ -10,7 +10,11 @@ module PageObject
       protected
 
       def self.watir_finders
-        super + [:text]
+        super + [:text, :value]
+      end
+
+      def self.selenium_finders
+        super + [:value]
       end
 
       def include_platform_for platform
